# optm

./: .gitignore  Makefile  README.md  chapters-print.tex  chapters.tex  chapters_leaf5.tex  exam_2025.md  exam_2025.txt  exam_text.txt  ioe.md  main.py  main.tex  main_leaf5.tex  pyproject.toml  slides-print.tex  slides-reader.tex  study-plan.md
.claude/: CLAUDE.md
extracted/: 10使用导数的优化算法.md  11无约束优化直接方法.md  12可行方向法.md  13罚函数法.md  1引言.md  2数学基础.md  3凸分析.md  4线性规划基本性质.md  5单纯形方法.md  6对偶理论.md  7最优性条件.md  8算法.md  9一维搜索.md
latex/: chapters.tex  review-content.tex  review-print.tex  review-reader.tex  review-source.tex  slides-print.tex  slides-reader.tex
latex/notes/: notes-ch01.tex  notes-ch02.tex  notes-ch03.tex  notes-ch04.tex  notes-ch05.tex  notes-ch06.tex  notes-ch07.tex  notes-ch08.tex  notes-ch09.tex  notes-print.tex
latex/review/: review-ch01.tex  review-ch02.tex  review-ch03.tex  review-ch04.tex  review-ch05.tex  review-ch06.tex  review-ch07.tex  review-ch08.tex  review-ch09.tex  review-reader.tex
latex/slides/: chapters.tex  slides-print.tex  slides-reader.tex
material/: 11无约束优化直接方法.pptx  12可行方向法.pptx  13罚函数法.pptx  1引言.pptx  2数学基础.pptx  3凸分析.pptx  4线性规划基本性质.pptx  5单纯形方法.pptx  6对偶理论.pptx  7最优性条件.pptx  8算法.pptx  9一维搜索.pptx  考试重点.md
notes/: example-notes.tex
scripts/: compute_label.py  download_pptx.py  extract_pdf.py  filter_config.json  fix_quotes.py  generate_chapters.py  generate_filtered.py  generate_reader.py  generate_review.py  notes_config.json  pptx_to_pdf.py  search_notes.py  verify_ch06.py  verify_ch08.py  verify_slides.py
(+3 files in other folders)
