[project]
name = "optm"
version = "0.1.0"
description = "最优化理论与算法 - Optimization Theory and Algorithms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.9.1",
    "jupyter>=1.1.1",
    "markitdown>=0.1.6",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pix2text>=1.1",
    "playwright>=1.60.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.3",
    "python-pptx>=1.0.2",
    "pywin32>=312",
    "scipy>=1.17.1",
]
